speedup in libvideolib (rebuild lib)

--- a/videolib/videolib.cbp
+++ b/videolib/videolib.cbp
@@ -25,6 +25,7 @@
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
+					<Add option="-march=core2" />
 					<Add option="-O2" />
 				</Compiler>
 				<Linker>
